# CUDA-Accelerated-Machine-Learning-Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  Notes.txt  README.md  Summer_Plan_CUDA_ML.md  loss_curve.csv
Nsight/: Project 1.qdproj
benchmarks/: benchmark.cu  benchmark.py  conv2d_benchmark.cu  gemm_benchmark.py  matmul_benchmark.cu  memory_benchmark.cu  streams_benchmark.cu  xor_loss_plot.py
data/: cnn_optimization.cu  mnist_cnn copy.cu  mnist_cnn.cu  mnist_test.cu  mnist_train.cu  prepare_dataset.py  prepare_minst.py  prepare_mnist.py  prepare_mnist_test.py  read_mnist.py  read_mnist_test.py
kernels/: activations.cu  activations.cuh  batchnorm.cu  batchnorm.cuh  common.cuh  conv2d.cu  conv2d.cuh  conv2d_mc.cu  conv2d_mc.cuh  fc.cu  fc.cuh  imageTest.cu  layer.cu  matmul.cu  matmul.cuh  memory_coalescing.cu  pooling.cu  pooling.cuh  reduction.cu  streams.cu  vector_add.cu
network/: layer.cu  layer.cuh  loss.cu  loss.cuh  optimizer.cu  optimizer.cuh  test_forward_pass.cu  train_xor.cu
